# judgeSense

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_parallel.bat  upload_to_hf.py
analysis/: explore_logs.py  factuality_jss_fixed.py  factuality_pair_overlap.py  generate_figures.py  per_template_factuality.py
data/prompt_pairs/: coherence.jsonl  combined.jsonl  factuality.jsonl  preference.jsonl  relevance.jsonl
data/results/: metrics_summary.json
data/validation/: coherence_paraphrase.jsonl  factuality_paraphrase.jsonl  preference_paraphrase.jsonl  relevance_paraphrase.jsonl
data/validation/manual/: coherence_manual.jsonl  factuality_manual.jsonl  preference_manual.jsonl  relevance_manual.jsonl
judgesense-benchmark/: README.md  dataset_card.md
outputs/: COMPLETION_REPORT.txt  factuality_T4_vs_noT4.csv  factuality_jss_fixed.csv  factuality_pair_flip_overlap.csv  factuality_per_template_JSS.csv  factuality_per_template_pair_JSS.csv
scripts/: experiment_plan.md  fix_existing_results.py  gen_factuality_table.py  manual_review.py  run_all.sh  validate_paraphrases.py  verify_apis.py  verify_results.json
src/: __init__.py  dataset_builder.py  dataset_builder_FIXED.py  evaluate.py  metrics.py  models.py  utils.py
tests/: conftest.py  test_factuality_jss.py  test_figures.py  test_pair_overlap.py  test_per_template.py  test_t4_audit.py
