[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judgesense"
version = "0.1.0"
description = "A benchmark and metric for quantifying prompt sensitivity in LLM-as-a-Judge systems"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Rohith Reddy Bellibatlu"}]
keywords = ["llm", "judge", "benchmark", "nlp", "evaluation", "prompt-sensitivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.26,<2.0"]

[project.optional-dependencies]
full = [
    "openai>=1.40,<2.0",
    "anthropic>=0.34,<1.0",
    "mistralai>=1.0,<2.0",
    "huggingface-hub>=0.24,<1.0",
    "google-generativeai>=0.7,<1.0",
    "scikit-learn>=1.4,<2.0",
    "datasets>=2.20,<3.0",
    "python-dotenv>=1.0,<2.0",
    "tqdm>=4.66,<5.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/rohithreddybc/judgeSense"
Repository = "https://github.com/rohithreddybc/judgeSense"
"Bug Tracker" = "https://github.com/rohithreddybc/judgeSense/issues"
Paper = "https://doi.org/10.5281/zenodo.19798166"

[project.scripts]
judgesense = "judgesense.evaluate:main"

[tool.setuptools]
package-dir = {"judgesense" = "src"}
packages = ["judgesense"]

[tool.setuptools.package-data]
judgesense = ["py.typed"]
